# navier-plate-calculator

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: dashboard.py  main.ipynb  plot.py
app/tasks/: clean_up.ipynb
