[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name="app"
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dash = "^2.18.2"
python-dotenv = "^1.0.1"
azure-storage-blob = "^12.24.0"
azure-identity = "^1.19.0"
papermill = "^2.6.0"
pandas = "^2.2.3"
sigmaepsilon-solid-fourier = "^2.1.0"
ipykernel = "^6.29.5"
asciitree = "^0.3.3"
